--- a/AndroidDemo/AndroidManifest.xml
+++ b/AndroidDemo/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name="com.liuyunlong.androiddemo.activity.ViewPagerItemActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.FragmentBaseItemActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.FragmentTabItemActivity" />
+        <activity android:name="com.liuyunlong.androiddemo.activity.FragmentPagerAdapterTabActivity" />
     </application>
 
 </manifest>
