--- a/AndroidDemo/bin/AndroidManifest.xml
+++ b/AndroidDemo/bin/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name="com.liuyunlong.androiddemo.activity.FragmentBaseItemActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.FragmentTabItemActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.FragmentPagerAdapterTabActivity" />
+        <activity android:name="com.liuyunlong.androiddemo.activity.MainTabActivity" />
     </application>
 
 </manifest>
