登录界面，edittext 去除默认格式background = @null checkbox 利用style设置自己的样式，去除默认用 button = @null

--- a/AndroidDemo/AndroidManifest.xml
+++ b/AndroidDemo/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name="com.liuyunlong.androiddemo.activity.MainTabActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.FamilyManagerActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.PrivilegeManageActivity" />
+        <activity android:name="com.liuyunlong.androiddemo.activity.LoginActivity" />
     </application>
 
 </manifest>
