数据存储 shared Perference，sqllite， contentProvider， file

--- a/AndroidDemo/AndroidManifest.xml
+++ b/AndroidDemo/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name="com.liuyunlong.androiddemo.activity.LoginActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.UserCenterActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.AddMemberActivity" />
+        <activity android:name="com.liuyunlong.androiddemo.activity.DataStoreActivity" />
     </application>
 
 </manifest>
