--- a/AndroidDemo/AndroidManifest.xml
+++ b/AndroidDemo/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,6 +37,7 @@
         <activity android:name="com.liuyunlong.androiddemo.activity.UserCenterActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.AddMemberActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.DataStoreActivity" />
+        <activity android:name="com.liuyunlong.androiddemo.activity.AndroidComponentsActivity" />
     </application>
 
 </manifest>
