--- a/AndroidDemo/bin/AndroidManifest.xml
+++ b/AndroidDemo/bin/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name="com.liuyunlong.androiddemo.activity.DataStoreActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.AndroidComponentsActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.GestureActivity" />
+        <activity android:name="com.liuyunlong.androiddemo.activity.SpinnerActivity" />
     </application>
 
 </manifest>
