--- a/AndroidDemo/bin/AndroidManifest.xml
+++ b/AndroidDemo/bin/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -51,6 +51,7 @@
         <activity android:name="com.liuyunlong.androiddemo.activity.GalleryActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.MenuActivity" />
         <activity android:name="com.liuyunlong.androiddemo.activity.SlidingDrawerActivity" />
+        <activity android:name="com.liuyunlong.androiddemo.activity.FileOperatorActivity" />
     </application>
 
 </manifest>
