--- a/ServletDemo/WebContent/WEB-INF/web.xml
+++ b/ServletDemo/WebContent/WEB-INF/web.xml
@@ -1,31 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>ServletDemo</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <session-config>
-    <session-timeout>60</session-timeout>
-  </session-config>
-  <context-param>
-    <param-name>data3</param-name>
-    <param-value>good</param-value>
-  </context-param>
-  <servlet>
-    <servlet-name>ServletTest</servlet-name>
-    <servlet-class>com.liuyunlong.servlet.ServletTest</servlet-class>
-    <init-param>
-      <param-name>nihao</param-name>
-      <param-value>你好</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ServletTest</servlet-name>
-    <url-pattern>*.do</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID"
+	version="3.0">
+	<display-name>ServletDemo</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+	<session-config>
+		<session-timeout>60</session-timeout>
+	</session-config>
+	<context-param>
+		<param-name>data3</param-name>
+		<param-value>good</param-value>
+	</context-param>
+	<error-page>
+		<exception-type>java.lang.ArithmeticException</exception-type>
+		<location>/errors/zero.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/errors/404.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/errors/500.jsp</location>
+	</error-page>
+	<servlet>
+		<servlet-name>ServletTest</servlet-name>
+		<servlet-class>com.liuyunlong.servlet.ServletTest</servlet-class>
+		<init-param>
+			<param-name>nihao</param-name>
+			<param-value>你好</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>Jsp</servlet-name>
+		<jsp-file>/jsp/case/pageContext.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ServletTest</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Jsp</servlet-name>
+		<url-pattern>/go.html</url-pattern>
+	</servlet-mapping>
 </web-app>
